2008-12-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, src/intel_hex.c,
	  doc/dfu-programmer.1: Applied the patch from Zachary
	  Clifford to support programming user flash on the
	  AVR32 chips and reading flash information from STDIN.
	  Additionally, updated the man page.

2008-12-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, docs/dfu-programmer.1 NEWS,
	  fedora/dfu-programmer.spec.in, configure.ac: Applied
	  the patch to add support for ignoring data writes that
	  could take place in the bootloader region.

2008-12-03 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, docs/dfu-programmer.1: Update the
	  project to support all the devices that FLIP supports.
	* NEWS, fedora/dfu-programmer.spec.in, configure.ac:
	  Updated the latest news about the 0.5.0 release

2008-10-31 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, fedora/dfu-programmer.spec.in,
	  docs/dfu-programmer.1: Apply Zachary Clifford patch to
	  add more support for AVR32 devices & merged the two
	  together.
	* src/*: Fixed a number of off-by-one errors that were
	  all over the place.

2008-10-02 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Enable chip erase, blank checking and
	  reading from flash for the AVR32 devices.

2008-10-01 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, fedora/10-dfu-programmer.fdi: Change the
	  parameters to use a struct instead of passing the usb
	  information as separate parameters.  Additionally
	  cleaned up some of the code to make the way for AVR32
	  support & added very basic identification support.

2008-09-26 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Fixed PID values for the
	  at90usb82 and at90usb182 chips based on Peter's findings.

2008-09-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,